Bug 331188 - Auto-increment sequence settings not persisted to XMI
Summary: Auto-increment sequence settings not persisted to XMI
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-16 13:40 UTC by Joris Steyn
Modified: 2014-03-27 19:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joris Steyn 2014-02-16 13:40:07 UTC
The "auto increment" functionality for messages on a sequence diagram does not work across reloads of Umbrello. The "sequence number" and enabled/disabled state of the checkbox are not persisted to XMI.

Reproducible: Always

Steps to Reproduce:
1. Create sequence diagram
2. Enable "auto increment" checkbox
3. Add a message
4. Save to XMI -> Reload
5. Add another message
Actual Results:  
After reload, the setting is lost and when adding another message the sequence number resets to "1".

Expected Results:  
Umbrello should remember both the checkbox state and the sequence number. Perhaps the determination of the sequence number should be smarter (determine by examining messages instead of keeping a counter).
Comment 1 Ralf Habacker 2014-03-27 18:10:11 UTC
Git commit 40b858bc8660abc1eeaad63addcb41ae54a9d8a0 by Ralf Habacker.
Committed on 27/03/2014 at 18:07.
Pushed by habacker into branch 'master'.

Make auto increment sequence diagram settings persistent.

M  +7    -0    umbrello/umlscene.cpp
M  +1    -1    umbrello/version.h

http://commits.kde.org/umbrello/40b858bc8660abc1eeaad63addcb41ae54a9d8a0
Comment 2 Ralf Habacker 2014-03-27 18:11:36 UTC
Git commit 44386d30bb42268d01580fd77e37e87750ac1cee by Ralf Habacker.
Committed on 27/03/2014 at 18:07.
Pushed by habacker into branch 'KDE/4.13'.

Make auto increment sequence diagram settings persistent.
FIXED-IN:4.13.0
(cherry picked from commit 40b858bc8660abc1eeaad63addcb41ae54a9d8a0)

M  +7    -0    umbrello/umlscene.cpp
M  +1    -1    umbrello/version.h

http://commits.kde.org/umbrello/44386d30bb42268d01580fd77e37e87750ac1cee
Comment 3 Ralf Habacker 2014-03-27 19:47:41 UTC
Git commit 6dc0e30762fe21b381c06f0e72759323d06b5ddc by Ralf Habacker.
Committed on 27/03/2014 at 18:19.
Pushed by habacker into branch 'master'.

Provide easier access to sequence number of class FloatingTextWidget.

M  +24   -4    umbrello/widgets/floatingtextwidget.cpp
M  +5    -0    umbrello/widgets/floatingtextwidget.h
M  +4    -2    umbrello/widgets/messagewidget.cpp

http://commits.kde.org/umbrello/6dc0e30762fe21b381c06f0e72759323d06b5ddc
Comment 4 Ralf Habacker 2014-03-27 19:47:42 UTC
Git commit f4fa36b5ec8ecf8013f0bf46ecb0748c99007a0f by Ralf Habacker.
Committed on 27/03/2014 at 19:07.
Pushed by habacker into branch 'master'.

Determine auto increment sequence start value from highest available sequence number.

M  +4    -3    umbrello/dialogs/selectopdlg.cpp
M  +1    -1    umbrello/dialogs/selectopdlg.h
M  +13   -9    umbrello/umlscene.cpp
M  +1    -3    umbrello/umlscene.h
M  +1    -3    umbrello/widgets/floatingtextwidget.cpp

http://commits.kde.org/umbrello/f4fa36b5ec8ecf8013f0bf46ecb0748c99007a0f
Comment 5 Ralf Habacker 2014-03-27 19:47:43 UTC
Git commit 1f2ff27722ffea756b034ea99b869556d7bbdb7a by Ralf Habacker.
Committed on 27/03/2014 at 19:43.
Pushed by habacker into branch 'master'.

Prevent adding of sequence messages without a custom or class method.

M  +4    -0    umbrello/dialogs/selectopdlg.cpp

http://commits.kde.org/umbrello/1f2ff27722ffea756b034ea99b869556d7bbdb7a
Comment 6 Ralf Habacker 2014-03-27 19:50:06 UTC
Git commit d74f0c0226fb98b8e2f70f88645ccab66f83a7fc by Ralf Habacker.
Committed on 27/03/2014 at 18:19.
Pushed by habacker into branch 'KDE/4.13'.

Provide easier access to sequence number of class FloatingTextWidget.
(cherry picked from commit 6dc0e30762fe21b381c06f0e72759323d06b5ddc)

M  +24   -4    umbrello/widgets/floatingtextwidget.cpp
M  +5    -0    umbrello/widgets/floatingtextwidget.h
M  +4    -2    umbrello/widgets/messagewidget.cpp

http://commits.kde.org/umbrello/d74f0c0226fb98b8e2f70f88645ccab66f83a7fc
Comment 7 Ralf Habacker 2014-03-27 19:50:07 UTC
Git commit 4df3da71f9fb8b58894cf5b465069d632162e695 by Ralf Habacker.
Committed on 27/03/2014 at 19:07.
Pushed by habacker into branch 'KDE/4.13'.

Determine auto increment sequence start value from highest available sequence number.
(cherry picked from commit f4fa36b5ec8ecf8013f0bf46ecb0748c99007a0f)

M  +4    -3    umbrello/dialogs/selectopdlg.cpp
M  +1    -1    umbrello/dialogs/selectopdlg.h
M  +13   -9    umbrello/umlscene.cpp
M  +1    -3    umbrello/umlscene.h
M  +1    -3    umbrello/widgets/floatingtextwidget.cpp

http://commits.kde.org/umbrello/4df3da71f9fb8b58894cf5b465069d632162e695
Comment 8 Ralf Habacker 2014-03-27 19:50:08 UTC
Git commit c4fd97e63adb518b73b0f51c3c5b6473b98e027a by Ralf Habacker.
Committed on 27/03/2014 at 19:43.
Pushed by habacker into branch 'KDE/4.13'.

Prevent adding of sequence messages without a custom or class method.
FIXED-IN:4.13.0
(cherry picked from commit 1f2ff27722ffea756b034ea99b869556d7bbdb7a)

M  +4    -0    umbrello/dialogs/selectopdlg.cpp

http://commits.kde.org/umbrello/c4fd97e63adb518b73b0f51c3c5b6473b98e027a