Prevent adding of sequence messages without a custom or class method.

BUG:331188
FIXED-IN:4.13.0
(cherry picked from commit 1f2ff27722ffea756b034ea99b869556d7bbdb7a)